# windfall_battery_tco_calculator

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
docs/superpowers/plans/: 2026-04-23-home-battery-tco-calculator.md
docs/superpowers/specs/: 2026-04-22-home-battery-tco-design.md
src/windfall_tco/: __init__.py  data_models.py  tariffs.py
src/windfall_tco/data_loading/: __init__.py  manual_profile.py  octopus_csv.py
src/windfall_tco/economics/: __init__.py  cost.py  payback.py  summary.py
src/windfall_tco/simulation/: __init__.py  run.py  step.py
tests/: test_data_models.py  test_tariffs.py
tests/data_loading/: test_manual_profile.py  test_octopus_csv.py
tests/data_loading/fixtures/: all_zero.csv  dst_autumn.csv  dst_spring.csv  multi_day.csv  normal_day.csv  partial.csv
tests/economics/: test_cost.py  test_payback.py  test_summary.py
tests/simulation/: test_run.py  test_step.py
